fix section spacing

--- a/style/home.css
+++ b/style/home.css
@@ -29,6 +29,7 @@
 }
 
 #home .section header {
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
